<resources>
    <string name="app_name">Fashion</string>
    <string name="app_name_home">首页</string>
    <string name="app_name_class">分类</string>
    <string name="app_name_cart">购物车</string>
    <string name="app_name_user">我的</string>
    <string name="user_head_textView">未登录</string>
    <string name="new_user">新用户注册</string>
    <string name="edit_name">手机号/用户名/邮箱</string>
    <string name="edit_pwd">请输入密码</string>
    <string name="edit_sucess_pwd">确认输入密码</string>
    <string name="edit_email">请填写邮箱</string>
    <string name="btn_sign">注册</string>
    <string name="btn_dl">登录</string>
    <string name="btn_qqdl">QQ登录</string>
    <string name="btn_exitdl">退出登录</string>
    <string name="cart">购物车</string>
    <string name="goodsay">客服</string>
    <string name="goodsc">收藏</string>
    <string name="mycart">我的购物车</string>
    <string name="addcart">添加购物车</string>
    <string name="actionshop">立即购买</string>
    <string name="startijkplayer">播放视频</string>
    <string name="exit">退出</string>
    <string name="isexit">是否确认退出</string>
    <string name="postive_button">确认</string>
    <string name="negative_button">取消</string>
    <string name="allorder">全部订单</string>
    <string name="myfoot">我的足迹</string>
    <string name="collectionStore">店铺收藏</string>
    <string name="collectionGoods">商品收藏</string>
    <string name="WaitPay">未付款</string>
    <string name="WaitDrive">待发货</string>
    <string name="WaitReceipt">待收货</string>
    <string name="WaitComment">待评价</string>
    <string name="WaitRefund">退款/货</string>
    <string name="userMoney">我的财产</string>
    <string name="propertyMoney">预存款</string>
    <string name="propertyCard">充值卡</string>
    <string name="propertyVouchers">代金券</string>
    <string name="propertyRed">红包</string>
    <string name="propertyIntegral">积分</string>
    <string name="address">收货地址</string>
    <string name="setting">系统设置</string>
</resources>
