<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/user_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/greySub"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="170dip"
            android:background="@color/main">

            <ImageView
                android:id="@+id/user_head_image"
                android:layout_width="64dip"
                android:layout_height="64dip"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_default_user_head"
                />

            <TextView
                android:id="@+id/user_head_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_head_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dip"
                android:text="@string/user_head_textView"
                android:textColor="@color/whiteAdd"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:background="@color/mainAdd"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/collectionGoodsTextView"
                style="@style/userCenter"
                android:drawableTop="@mipmap/ic_collection_goods"
                android:text="@string/collectionGoods"/>

            <TextView
                android:id="@+id/collectionStoreTextView"
                style="@style/userCenter"
                android:drawableTop="@mipmap/ic_collection_store"
                android:text="@string/collectionStore"/>

            <TextView
                android:id="@+id/myFootprintTextView"
                style="@style/userCenter"
                android:drawableTop="@mipmap/ic_user_footprint"
                android:text="@string/myfoot"/>
        </LinearLayout>

        <TextView
            android:id="@+id/orderTextView"
            style="@style/userAllGoods"
            android:drawableLeft="@mipmap/ic_user_order"
            android:text="@string/allorder"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderWaitPayTextView"
                style="@style/userAllGoodsMessage"
                android:drawableTop="@mipmap/ic_user_order_wait_drive"
                android:text="@string/WaitPay"/>

            <TextView
                android:id="@+id/orderWaitDriveTextView"
                style="@style/userAllGoodsMessage"
                android:drawableTop="@mipmap/ic_user_order_wait_drive"
                android:text="@string/WaitDrive"/>

            <TextView
                android:id="@+id/orderWaitReceiptTextView"
                style="@style/userAllGoodsMessage"
                android:drawableTop="@mipmap/ic_user_order_wait_receipt"
                android:text="@string/WaitReceipt"/>

            <TextView
                android:id="@+id/orderWaitCommentTextView"
                style="@style/userAllGoodsMessage"
                android:drawableTop="@mipmap/ic_user_order_wait_comment"
                android:text="@string/WaitComment"/>

            <TextView
                android:id="@+id/orderWaitRefundTextView"
                style="@style/userAllGoodsMessage"
                android:drawableTop="@mipmap/ic_user_order_wait_refund"
                android:text="@string/WaitRefund"/>
        </LinearLayout>

        <TextView
            android:id="@+id/userMoneyTextView"
            style="@style/userAllGoods"
            android:drawableLeft="@mipmap/ic_user_property"
            android:text="@string/userMoney"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/propertyMoneyTextView"
                style="@style/userAllGoodsMessage"
                android:drawableTop="@mipmap/ic_user_property_money"
                android:text="@string/propertyMoney"/>

            <TextView
                android:id="@+id/propertyCardTextView"
                style="@style/userAllGoodsMessage"
                android:drawableTop="@mipmap/ic_user_property_card"
                android:text="@string/propertyCard"/>

            <TextView
                android:id="@+id/propertyVouchersTextView"
                style="@style/userAllGoodsMessage"

                android:drawableTop="@mipmap/ic_user_property_vouchers"
                android:text="@string/propertyVouchers"/>

            <TextView
                android:id="@+id/propertyRedTextView"
                style="@style/userAllGoodsMessage"

                android:drawableTop="@mipmap/ic_user_property_red"
                android:text="@string/propertyRed"/>

            <TextView
                android:id="@+id/propertyIntegralTextView"
                style="@style/userAllGoodsMessage"

                android:drawableTop="@mipmap/ic_user_property_integral"
                android:text="@string/propertyIntegral"/>
        </LinearLayout>

        <TextView
            android:id="@+id/addressTextView"
            style="@style/userAddress"
            android:layout_marginTop="16dip"

            android:drawableLeft="@mipmap/ic_user_address"
            android:text="@string/address"/>

        <TextView
            android:id="@+id/settingTextView"
            style="@style/userAddress"

            android:drawableLeft="@mipmap/ic_user_setting"
            android:text="@string/setting"/>
    </LinearLayout>

</RelativeLayout>

