<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.five.fashion.signin.view.SignInActivity">
    <TextView
        android:id="@+id/zc_title_back"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main"
        android:drawableLeft="@mipmap/btn_back_detail_normal"
        android:gravity="center"
        android:text="@string/new_user"/>

    <EditText
        android:id="@+id/zc_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/edit_name"/>

    <EditText
        android:id="@+id/zc_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/edit_pwd"/>

    <EditText
        android:id="@+id/zc_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/edit_sucess_pwd"/>

    <EditText
        android:id="@+id/zc_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/edit_email"/>
    <Button
        android:id="@+id/zc_btn"
        android:text="@string/btn_sign"
        android:background="@color/main"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
