<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.five.fashion.main.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/main_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
    </android.support.v4.view.ViewPager>

    <LinearLayout
        style="@style/layoutheadFoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        >

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/homeRadioButton"
                style="@style/MianButton"
                android:drawableTop="@drawable/selector_radionutton_home"
                android:text="@string/app_name_home"/>

            <RadioButton
                android:id="@+id/classRadioButton"
                style="@style/MianButton"
                android:drawableTop="@drawable/selector_radionutton_class"
                android:text="@string/app_name_class"/>

            <RadioButton
                android:id="@+id/cartRadioButton"
                style="@style/MianButton"

                android:drawableTop="@drawable/selector_radionutton_cart"
                android:text="@string/app_name_cart"/>

            <RadioButton
                android:id="@+id/userRadioButton"
                style="@style/MianButton"
                android:drawableTop="@drawable/selector_radionutton_user"
                android:text="@string/app_name_user"/>
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
